Fixed z-index bug for nodekvpoptions. Root-div is still buggy for some reason.

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -1061,7 +1061,7 @@
   .div-sticky-inactive {
     position: sticky;
     top: calc(var(--spacing) * 1);
-    z-index: 40;
+    z-index: 20;
     margin-bottom: calc(var(--spacing) * 1);
     display: flex;
     max-height: var(--inp-h);
@@ -1080,7 +1080,7 @@
   .div-sticky-inactive-selected {
     position: sticky;
     top: calc(var(--spacing) * 1);
-    z-index: 40;
+    z-index: 20;
     margin-bottom: calc(var(--spacing) * 1);
     display: flex;
     max-height: var(--inp-h);
@@ -1115,7 +1115,7 @@
   .div-sticky-active {
     position: sticky;
     top: calc(var(--spacing) * 1);
-    z-index: 40;
+    z-index: 20;
     margin-bottom: calc(var(--spacing) * 1);
     display: flex;
     max-height: var(--inp-h);
@@ -1132,7 +1132,7 @@
   .div-sticky-active-selected {
     position: sticky;
     top: calc(var(--spacing) * 1);
-    z-index: 40;
+    z-index: 20;
     margin-bottom: calc(var(--spacing) * 1);
     display: flex;
     max-height: var(--inp-h);
